--- a/templates/actor/dialogs/psychic-power-attack-dialog.html
+++ b/templates/actor/dialogs/psychic-power-attack-dialog.html
@@ -5,21 +5,21 @@
         <div class="flexcol attack-section">
             <label class="section-title">Distance</label>
             <div class="list-item flexrow">
-                <input type="radio" name="distance" value="{{modifiers.range.standard}}" checked><label>Standard: +{{modifiers.range.standard}}</label>
+                <input type="radio" name="distance" value="{{modifiers.range.standard}}" {{#if options.normal}} checked{{/if}}><label>Standard: +{{modifiers.range.standard}}</label>
             </div>
             <div class="list-item flexrow">
 
-                <input type="radio" name="distance" value="{{modifiers.range.pointblank}}"><label>Point blank: +{{modifiers.range.pointblank}}</label>
+                <input type="radio" name="distance" value="{{modifiers.range.pointblank}}"{{#if options.pointblank}} checked{{/if}}><label>Point blank: +{{modifiers.range.pointblank}}</label>
 
             </div>
             <div class="list-item flexrow">
-                <input type="radio" name="distance" value="{{modifiers.range.short}}" ><label>Short: +{{modifiers.range.short}}</label>
+                <input type="radio" name="distance" value="{{modifiers.range.short}}" {{#if options.short}} checked{{/if}}><label>Short: +{{modifiers.range.short}}</label>
             </div>
             <div class="list-item flexrow">
-                <input type="radio" name="distance" value="{{modifiers.range.long}}" ><label>Long: {{modifiers.range.long}}</label>
+                <input type="radio" name="distance" value="{{modifiers.range.long}}"{{#if options.long}} checked{{/if}} ><label>Long: {{modifiers.range.long}}</label>
             </div>
             <div class="list-item flexrow">
-                <input type="radio" name="distance" value="{{modifiers.range.extreme}}" ><label>Extreme: {{modifiers.range.extreme}}</label>
+                <input type="radio" name="distance" value="{{modifiers.range.extreme}}" {{#if options.extreme}} checked{{/if}}><label>Extreme: {{modifiers.range.extreme}}</label>
             </div>
         </div>
         <div class="flexcol attack-section">
@@ -51,7 +51,7 @@
 
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="prone" value="-10"><label>Prone/Knocked Down/Higher Ground: -10</label>
+                <input type="checkbox" name="prone" value="-10" {{#if options.prone}} checked{{/if}}><label>Prone/Knocked Down/Higher Ground: -10</label>
             </div>
             <div class="list-item flexrow">
 
@@ -59,7 +59,7 @@
             </div>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="surprised" value="30" ><label>Surprised/Unaware: +30</label>
+                <input type="checkbox" name="surprised" value="30" {{#if options.helpless}} checked{{/if}}><label>Surprised/Unaware: +30</label>
 
             </div>
             <div class="list-item flexrow">
@@ -69,7 +69,7 @@
             </div>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="stunned" value="20" ><label>Stunned: +20</label>
+                <input type="checkbox" name="stunned" value="20" {{#if options.stunned}} checked{{/if}}><label>Stunned: +20</label>
 
             </div>
             <div class="list-item flexrow">
@@ -83,13 +83,20 @@
 
             </div>
             <select class="size" name="size">
-                
+                {{debug this}}
+                {{#if options.size}}
                 {{#each size}}
-
-                <option value="{{this.mod}}" {{#if (contains this.name "average")}}selected{{/if}}>{{this.name}}</option>
-
+                <option value="{{this.mod}}" {{#if (equals @index ../options.size)}}selected{{/if}}>{{this.name}}</option>
+              
                 {{/each}}
+                {{else}}
+                {{#each size}}
+                <option value="{{this.mod}}" {{#if (contains this.name "average")}}selected{{/if}}>{{this.name}}</option>
+               
+                {{/each}}
+                {{/if}}
             </select>
+
 
         </div>
     </div>
