--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -141,9 +141,9 @@
 
 
             </div>
-
+            {{debug actor.wornGear.weapons}}
             {{#each actor.wornGear.weapons}}
-
+            {{debug this}}
             {{#if (contains this.type "ranged")}}
 
             <div class="weapons grid grid-2col">
