--- a/templates/actor/dialogs/melee-attack-dialog.html
+++ b/templates/actor/dialogs/melee-attack-dialog.html
@@ -114,7 +114,7 @@
             <label class="section-title">Target is</label>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="defensive" value="-20"><label>Defensive Stance: -20</label>
+                <input type="checkbox" name="defensive" value="-20"{{#if options.totalDef}} checked{{/if}}><label>Defensive Stance: -20</label>
             </div>
             <div class="list-item flexrow">
 
@@ -131,7 +131,7 @@
             </div>
             <div class="list-item flexrow">
 
-                <input type="checkbox" name="running" value="20" ><label>Running: +20</label>
+                <input type="checkbox" name="running" value="20" {{#if options.running}} checked{{/if}}><label>Running: +20</label>
 
             </div>
             <div class="list-item flexrow">
@@ -140,7 +140,7 @@
 
             </div>
             <select class="size" name="size">
-                {{debug this}}
+                
                 {{#if options.size}}
                 {{#each size}}
                 <option value="{{this.mod}}" {{#if (equals @index ../options.size)}}selected{{/if}}>{{this.name}}</option>
