--- a/templates/actor/actor-corruption.html
+++ b/templates/actor/actor-corruption.html
@@ -1,4 +1,4 @@
-<div class="corruption-insanity flexrow">
+<div class="sheet-corruption-insanity flexrow">
     
     {{#unless actor.flags.fortyk.incorruptibledevotion}}
     <div class="corruption flexcol">
