--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -1,4 +1,4 @@
-<div class="exp flexcol">
+<div class="sheet-exp flexcol">
     <label class="section-title">APTITUDES</label>
     <div class="grid grid-2col">
         
