--- a/templates/actor/actor-gear.html
+++ b/templates/actor/actor-gear.html
@@ -1,4 +1,4 @@
-<div class="gear flexrow">
+<div class="sheet-gear flexrow">
     <div class="cyber flexcol">
         <span class="section-title">CYBERNETICS</span>
         <a class="item-create button" data-type="cybernetic" title="Add a new Cybernetic">Add Cybernetic</a>
