--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -1,7 +1,7 @@
 
 
 
-<div class="skills flexcol">
+<div class="sheet-skills flexcol">
    
     <div class="flexrow">
         <input type="text"  id="skillfilter" class="skillfilter" placeholder="Search...">
