--- a/templates/item/dialogs/weapon-special-dialog.html
+++ b/templates/item/dialogs/weapon-special-dialog.html
@@ -4,9 +4,11 @@
 {{#each specials}}
     <div class="special-list">
         <label title="{{this.description}}">{{this.label}}</label>
-        <input type="checkbox" class="weapon-special" id="{{@key}}" {{checked this.value}}>
+        
         {{#if (isdefined this.num)}}
         <input type="text" class="weapon-special-number" id="{{@key}}num" value="{{this.num}}">
+        {{else}}
+        <input type="checkbox" class="weapon-special" id="{{@key}}" {{checked this.value}}>
         {{/if}}
     </div>
     
