--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -165,7 +165,7 @@
                             <span>Damage: </span>
                             <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
                         </div>
-                        {{#if this.flags.specials.force.value}}
+                        {{#if this.flags.fortyk.force}}
                         <div class="list-item">
 
                             <a class="force-roll button" data-label="Force"> Force</a>
@@ -229,7 +229,7 @@
 
                         </div>
 
-                        {{#if this.flags.specials.force.value}}
+                        {{#if this.flags.fortyk.force}}
                         <div class="list-item">
 
                             <a class="force-roll button" data-label="Force"> Force</a>
@@ -237,18 +237,18 @@
 
                         </div>
                         {{/if}}
-                        {{#if this.flags.specials.maximal.value}}
+                        {{#if this.flags.fortyk.maximal}}
                         <div class="list-item">
-                            <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this._id}}"  {{checked this.flags.specials.maximal.maximal}}></span>
+                            <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this._id}}"  {{checked this.flags.fortyk.maximalMode}}></span>
 
 
                         </div>
                         {{/if}}
-                        {{#if this.flags.specials.lasModal.value}}
+                        {{#if this.flags.fortyk.lasModal}}
                         <div class="list-item">
                             <span>Las Fire Mode: 
                                 <select class="lasMode"  data-item-id="{{this._id}}" data-dtype="Number">
-                                    {{#select this.flags.specials.lasModal.mode}}
+                                    {{#select this.flags.fortyk.lasMode}}
 
                                     {{#each this.FORTYK.lasModes}}
 
@@ -285,9 +285,15 @@
                         </div>
                         <div class="list-item">
                             <span>Special: 
-                                {{#each this.flags.specials}}
-                                {{#if this.value}}
-                                <a class="item-descr" data-name="{{this.label}}" data-item-descr="{{this.description}}" >{{this.label}}{{#if (isdefined this.num)}}({{this.num}}){{/if}}</a>
+
+                                {{#each this.flags.fortyk as |flag key|}}
+
+                                {{#if this}}
+
+                                {{#with (lookup ../FORTYK.itemFlags [key])~}}
+                                <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
+
+                                    {{label}}{{/with}}{{#if (isnumber this)}}({{this}}){{/if}}</a>
                                 {{/if}}{{/each}}
                             </span>
 
@@ -539,9 +545,15 @@ Stays commented until the parse script works
 
                             <div class="list-item">
                                 <span>Special: 
-                                    {{#each this.flags.specials}}
-                                    {{#if this.value}}
-                                    <a class="item-descr" data-name="{{this.label}}" data-item-descr="{{this.description}}" >{{this.label}}{{#if (isdefined this.num)}}({{this.num}}){{/if}}</a>
+
+                                    {{#each this.flags.fortyk as |flag key|}}
+
+                                    {{#if this}}
+
+                                    {{#with (lookup ../FORTYK.itemFlags [key])~}}
+                                    <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
+
+                                        {{label}}{{/with}}{{#if (isnumber this)}}({{this}}){{/if}}</a>
                                     {{/if}}{{/each}}
                                 </span>
 
