--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -23,7 +23,7 @@
 
 
     {{!-- Sheet Body --}}
-    <section class="sheet-body">
+    <section class="sheet-content">
 
         {{!-- Main Tab --}}
         <div class="tab main" data-group="primary" data-tab="main">
