--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -1,4 +1,4 @@
-<div class="tnt flexcol">
+<div class="sheet-tnt flexcol">
     <a class="tnt-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
     <div class="list list3col grid grid-3col">
         <span class="list-item">Name</span>
