--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -22,32 +22,7 @@
 
 
 }
-/* Tooltip container */
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
 
-/* Tooltip text */
- .tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
- 
-  /* Position the tooltip text - see examples below! */
-  position: absolute;
-  z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-}
 
 .button:hover, .button:focus {
     color: #000;
@@ -171,6 +146,9 @@
 }
 
 /* Styles limited to fortyk sheets */
+.underline{
+    text-decoration:underline;
+}
 .fortyk .item-form {
     font-family: "Roboto", sans-serif;
 }
@@ -211,13 +189,14 @@
     flex: 1;
     flex-direction: column;
 }
-.fortyk .sheet-main .header-fields .descr{
+.fortyk .descr{
     flex:0;   
     place-items: center stretch;
     margin-top: 0px;
     margin-bottom:5px;
 }
-.fortyk .sheet-main .header-fields .descr .descrRow{
+.fortyk .descr .descrRow{
+    width:100%;
     padding-left: 10px;
     margin-bottom:2px;
     border: 1px solid #999;
@@ -344,6 +323,7 @@
     font-weight: bold;
     font-style:bold;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .fortyk .tabs {
@@ -608,6 +588,9 @@
 .fortyk .npc-info{
     overflow: visible;
     height:50%;
+}
+.fortyk .cod{
+    flex:6;
 }
 .test-success{
     background-color: green !important;
