--- a/templates/actor/actor-gear.html
+++ b/templates/actor/actor-gear.html
@@ -47,7 +47,7 @@
             {{#each actor.wargear as |w key|}}
 
 
-            <a class="item-descr list-item" data-name="{{w.name}}" data-item-descr="{{w.data.description.value}}">{{w.name}}</a>
+            <a class="item-descr list-item drag" data-name="{{w.name}}" data-item-descr="{{w.data.description.value}}">{{w.name}}</a>
             <input type="text" class="item-text-input list-item" data-target="data.amount.value" value="{{w.data.amount.value}}" data-item-id="{{w._id}}" data-dtype="Number">
             <span class="list-item">{{w.data.weight.total}}kg</span>
 
