--- a/templates/actor/dialogs/tnt-dialog.html
+++ b/templates/actor/dialogs/tnt-dialog.html
@@ -1,5 +1,5 @@
 <input type="text"  id="tntfilter" class="tntfilter" placeholder="Search...">
-<select id="tntselect" size=30 multiple>
+<select id="tntselect" class="tntselect" size=30 multiple>
 
     {{#each tnts}}
 
