--- a/templates/actor/actorOW-main.html
+++ b/templates/actor/actorOW-main.html
@@ -70,11 +70,11 @@
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Regiment:</span>
-                <input name="data.background.value" type="text" value="{{data.regiment.value}}" placeholder="???"/>
+                <input name="data.regiment.value" type="text" value="{{data.regiment.value}}" placeholder="???"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Specialty:</span>
-                <input name="data.role.value" type="text" value="{{data.specialty.value}}" placeholder="???"/>
+                <input name="data.specialty.value" type="text" value="{{data.specialty.value}}" placeholder="???"/>
             </div>
 
         </div>
