--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -357,28 +357,32 @@
                 {{/select}}
             </select>
             <span class="section-title">MOVEMENT</span>
-            <div class="flexrow movement">
-                <div class="resource flex-group-center">
-                    <label for="data.fatigue.value" class="resource-label">Half Move</label>
-                    <div class="resource-content flexrow flex-center flex-between">
+            <div class="flexrow">
+                <div class="movementbox flex-group-center">
+                    <div class="movementlabel"> <label for="data.fatigue.value" class="movementcontent resource-label">Half Move</label></div>
+                   
+                    <div class="movementnumber">
                         <span>{{data.secChar.movement.half}}</span>
                     </div>
                 </div>
-                <div class="resource flex-group-center">
-                    <label for="data.fatigue.value" class="resource-label">Full Move</label>
-                    <div class="resource-content flexrow flex-center flex-between">
+                <div class="movementbox flex-group-center">
+                    <div class="movementlabel"> <label for="data.fatigue.value" class="movementcontent resource-label">Full Move</label></div>
+                   
+                    <div class="movementnumber">
                         <span>{{data.secChar.movement.full}}</span>
                     </div>
                 </div>
-                <div class="resource flex-group-center">
-                    <label for="data.fatigue.value" class="resource-label">Charge</label>
-                    <div class="resource-content flexrow flex-center flex-between">
+                <div class="movementbox flex-group-center">
+                    <div class="movementlabel"> <label for="data.fatigue.value" class="movementcontent resource-label">Charge</label></div>
+                   
+                    <div class="movementnumber">
                         <span>{{data.secChar.movement.charge}}</span>
                     </div>
                 </div>
-                <div class="resource flex-group-center">
-                    <label for="data.fatigue.value" class="resource-label">Run</label>
-                    <div class="resource-content flexrow flex-center flex-between">
+                <div class="movementbox flex-group-center">
+                    <div class="movementlabel"> <label for="data.fatigue.value" class="movementcontent resource-label">Run</label></div>
+                   
+                    <div class="movementnumber">
                         <span>{{data.secChar.movement.run}}</span>
                     </div>
                 </div>
