--- a/templates/actor/dialogs/ranged-attack-dialog.html
+++ b/templates/actor/dialogs/ranged-attack-dialog.html
@@ -4,24 +4,32 @@
             <label class="section-title">Attack Action</label>
             <div class="list-item flexrow"{{#unless single}} hidden{{/unless}}>
 
-                <input type="radio" name="attack-type" value="{{modifiers.standard}}" index='0'type="standard"label="Standard" {{#if single}}checked{{/if}}><label>Standard: +{{modifiers.standard}}</label>
+                <input type="radio" name="attack-type" value="{{modifiers.standard}}" index='0'attacktype="standard"label="Standard" {{#if single}}checked{{/if}}><label>Standard: +{{modifiers.standard}}</label>
             </div>
             <div class="list-item flexrow" {{#unless semi}} hidden{{/unless}}>
 
-                <input type="radio" name="attack-type" value="{{modifiers.semi}}" index='1' type="semi"label="Semi-Auto"><label>Semi-Auto: +{{modifiers.semi}}</label>
+                <input type="radio" name="attack-type" value="{{modifiers.semi}}" index='1' attacktype="semi"label="Semi-Auto"><label>Semi-Auto: +{{modifiers.semi}}</label>
             </div>
             <div class="list-item flexrow" {{#unless full}} hidden{{/unless}}>
 
-                <input type="radio" name="attack-type" value="{{modifiers.full}}" index='2'type="full"label="Full-Auto"{{#unless single}}checked{{/unless}}><label>Full-Auto: {{modifiers.full}}</label>
+                <input type="radio" name="attack-type" value="{{modifiers.full}}" index='2'attacktype="full"label="Full-Auto"{{#unless single}}checked{{/unless}}><label>Full-Auto: {{modifiers.full}}</label>
             </div>
             <div class="list-item flexrow" {{#unless supp}} hidden{{/unless}}>
 
-                <input type="radio" name="attack-type" value="{{modifiers.suppressive}}" index='3' type="full"label="Suppressing Fire"><label>Suppressing Fire: {{modifiers.suppressive}}</label>
+                <input type="radio" name="attack-type" value="{{modifiers.suppressive}}" index='3' attacktype="full"label="Suppressing Fire"><label>Suppressing Fire: {{modifiers.suppressive}}</label>
             </div>
 
             <div class="list-item flexrow" {{#unless single}} hidden{{/unless}}>
 
-                <input type="radio" name="attack-type" value="{{modifiers.called}}" index='0' type="standard" label="Called Shot" ><label>Called Shot: {{modifiers.called}}</label>
+                <input type="radio" name="attack-type" value="{{modifiers.called}}" index='0' attacktype="called" label="Called Shot" ><label>Called Shot: {{modifiers.called}}</label>
+                <select name="calledLoc">
+                    <option value="9">Head</option>
+                    <option value="69">Body</option>
+                    <option value="29">Left Arm</option>
+                    <option value="19">Right Arm</option>
+                    <option value="84">Left Leg</option>
+                    <option value="99">Right Leg</option>
+                </select>
             </div>
             <div class="list-item flexrow">
 
