--- a/templates/actor/actor-psykana.html
+++ b/templates/actor/actor-psykana.html
@@ -67,10 +67,16 @@
 
                 <div class="list-item">
                     <span>Special: 
-                        {{#each this.flags.specials}}
-                        {{#if this.value}}
-                        <a class="item-descr" data-name="{{this.label}}" data-item-descr="{{this.description}}" >{{this.label}}{{#if (isdefined this.num)}}({{this.num}}){{/if}}</a>
+                        {{#each this.flags.fortyk as |flag key|}}
+
+                        {{#if this}}
+
+                        {{#with (lookup ../FORTYK.itemFlags [key])~}}
+                        <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
+
+                            {{label}}{{/with}}{{#if (isnumber this)}}({{this}}){{/if}}</a>
                         {{/if}}{{/each}}
+                        
                     </span>
 
                 </div>
