--- a/templates/item/item-malignancy-sheet.html
+++ b/templates/item/item-malignancy-sheet.html
@@ -2,7 +2,7 @@
     
     <div class="flexcol">
         <label>Name:</label>
-        <input type="text" value="{{item.name}}" name="name">
+        <input type="text" value="{{name}}" name="name">
     </div>
     <div class="flexcol">
         <label>Table Range:</label>
