--- a/templates/item/item-mission-sheet.html
+++ b/templates/item/item-mission-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-sheet flexcol">
     <div class="flexcol">
         <label>Name:</label>
-        <input type="text" value="{{item.name}}" name="name">
+        <input type="text" value="{{name}}" name="name">
     </div>
     <div class="flexcol">
         <label>Experience:</label>
