--- a/templates/item/item-psychicPower-sheet.html
+++ b/templates/item/item-psychicPower-sheet.html
@@ -2,7 +2,7 @@
     <div class="grid grid-3col">
         <div class="flexcol">
             <label>Name:</label>
-            <input type="text" value="{{item.name}}" name="name">
+            <input type="text" value="{{name}}" name="name">
         </div>
         <div class="flexcol">
             <label>Action:</label>
