--- a/templates/item/item-rangedWeapon-sheet.html
+++ b/templates/item/item-rangedWeapon-sheet.html
@@ -3,7 +3,7 @@
     <div class="grid grid-3col">
         <div class="flexcol">
             <label>Name:</label>
-            <input type="text" value="{{item.name}}" name="name">
+            <input type="text" value="{{name}}" name="name">
         </div>
 
         <div class="flexcol">
