--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -25,7 +25,7 @@
         <div class="flexcol">
             <label>Name:</label>
             
-            <input type="text" class="name skill-dialog" name="name" value="{{item.name}}" data-dtype="String" required>
+            <input type="text" class="name skill-dialog" name="name" value="{{name}}" data-dtype="String" required>
         </div>
         <div class="flexcol">
             <label>Characteristic</label>
